<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tts_input_label"
            style="@style/title01"
            android:text="@string/tts_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tbScript"
            style="@style/edit01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tts_input_label" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/button01"
            android:enabled="false"
            android:onClick="onClickSubmit"
            android:text="@string/tts_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tbScript" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tts_api_key_label"
            style="@style/title01"
            android:text="@string/tts_input_api_key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

        <EditText
            android:id="@+id/tbApiKey"
            style="@style/edit01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tts_api_key_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>